# haskell-argparser

./: .gitignore  .travis.yaml  .travis.yml  ArgParser.cabal  Makefile  README.md  haskell-argparser.cabal
src/Data/: ArgParser.hs
src/Data/ArgParser/: Text.hs  Types.hs
test/Data/: ArgParserSpec.hs
test/Data/ArgParser/: TextSpec.hs
tests/: TestArgParser.hs
