name:                haskell-argparser
version:             0.0.2
synopsis:            Library to parse a string consisting of arguments, in to a list of arguments.
description:
    When you need to store a raw string of command-like arguments, then parse it into a list of arguments.
homepage:            https://github.com/adarqui/haskell-argparser
bug-reports:         https://github.com/adarqui/haskell-argparser/issues
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.18
homepage:            https://github.com/adarqui/haskell-argparser
bug-reports:         https://github.com/adarqui/haskell-argparser/issues

library
    exposed-modules: Data.ArgParser
                   , Data.ArgParser.Text
                   , Data.ArgParser.Types
    build-depends:
                     base >= 4
                   , text
    hs-source-dirs:  src
    ghc-options:     -Wall -Werror
    default-language: Haskell2010

test-suite tests
    type:            exitcode-stdio-1.0
    main-is:         Spec.hs
    other-modules:   Data.ArgParserSpec
    build-depends:
                     base >= 4
                   , hspec
                   , text
                   , haskell-argparser
    hs-source-dirs:  test
    ghc-options:     -Wall -Werror
    default-language: Haskell2010

source-repository head
  type:              git
  location:          https://github.com/adarqui/haskell-argparser.git
